<?xml version="1.0"?>
<package>
  <name>ros_rigit</name>
  <version>0.0.0</version>
  <description>The ros_rigit package</description>

  <maintainer email="slivingston@cds.caltech.edu">Scott C. Livingston</maintainer>
  <author>Scott C. Livingston</author>
  <author>Shuo Han</author>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>trackem_ros</run_depend>


  <export></export>
</package>